--- a/app/src/main/res/layout/fragment_device_info.xml
+++ b/app/src/main/res/layout/fragment_device_info.xml
@@ -5,8 +5,14 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="isDeviceConnected"
+            type="Boolean" />
+
+        <variable
+            name="isLoading"
             type="Boolean" />
 
         <variable
@@ -18,6 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
+        android:padding="16dp"
         tools:context=".presenter.fragment.DeviceInfoFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -90,5 +97,53 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/sfLayout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:visibility="@{isLoading? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/clDevice">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <include layout="@layout/list_item_ble_service_shimmer_layout" />
+
+                <include layout="@layout/list_item_ble_service_shimmer_layout" />
+
+                <include layout="@layout/list_item_ble_service_shimmer_layout" />
+
+                <include layout="@layout/list_item_ble_service_shimmer_layout" />
+
+                <include layout="@layout/list_item_ble_service_shimmer_layout" />
+
+                <include layout="@layout/list_item_ble_service_shimmer_layout" />
+
+                <include layout="@layout/list_item_ble_service_shimmer_layout" />
+
+                <include layout="@layout/list_item_ble_service_shimmer_layout" />
+
+            </LinearLayout>
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvServicesCharacteristics"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:visibility="visible"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/clDevice"
+            tools:listitem="@layout/list_item_ble_service_layout" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
