--- a/app/src/main/res/layout/fragment_scanning.xml
+++ b/app/src/main/res/layout/fragment_scanning.xml
@@ -57,6 +57,7 @@
             android:ellipsize="end"
             android:hint="name"
             android:maxLines="1"
+            android:textColor="@color/teal_700"
             android:singleLine="true"
             android:textColorHint="@color/light_grey"
             app:layout_constraintBottom_toBottomOf="@+id/filterByText"
