added descriptors list inside characteristics

--- a/app/src/main/res/layout/list_item_ble_characteristics_layout.xml
+++ b/app/src/main/res/layout/list_item_ble_characteristics_layout.xml
@@ -50,16 +50,60 @@
                 tools:text="Properties" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvOperation"
-                android:layout_width="match_parent"
+                android:id="@+id/rvProperty"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:orientation="horizontal"
+                tools:itemCount="2"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvCharProperties"
-                tools:listitem="@layout/list_item_ble_operation_layout" />
+                tools:listitem="@layout/list_item_ble_property_layout" />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:elevation="5dp"
+                app:cardCornerRadius="5dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rvProperty">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/teal_200"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:id="@+id/tvDescriptor"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Descriptor"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        app:drawableEndCompat="@drawable/ic_arrow_down"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rvDescriptor"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/tvDescriptor"
+                        tools:itemCount="1"
+                        tools:listitem="@layout/list_item_ble_descriptor_layout" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.cardview.widget.CardView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
