--- a/app/src/main/res/layout/fragment_device_info.xml
+++ b/app/src/main/res/layout/fragment_device_info.xml
@@ -136,6 +136,7 @@
             android:id="@+id/rvServicesCharacteristics"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            tools:itemCount="1"
             android:visibility="visible"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
