--- a/app/src/main/res/layout/list_item_ble_descriptor_layout.xml
+++ b/app/src/main/res/layout/list_item_ble_descriptor_layout.xml
@@ -15,12 +15,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        app:cardCornerRadius="5dp">
+        app:cardCornerRadius="5dp">teal_700
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/teal_700"
+            android:background="@color/grey"
             android:padding="10dp">
 
             <TextView
