--- a/app/src/main/res/layout/list_item_ble_property_layout.xml
+++ b/app/src/main/res/layout/list_item_ble_property_layout.xml
@@ -21,7 +21,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/black">
+            android:background="@color/teal_200">
 
             <TextView
                 android:id="@+id/tv_property"
