--- a/app/src/main/res/layout/list_item_ble_service_shimmer_layout.xml
+++ b/app/src/main/res/layout/list_item_ble_service_shimmer_layout.xml
@@ -15,6 +15,7 @@
         <View
             android:layout_width="20dp"
             android:layout_height="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:background="@color/teal_700"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
