--- a/app/src/main/res/layout/list_item_ble_characteristics_layout.xml
+++ b/app/src/main/res/layout/list_item_ble_characteristics_layout.xml
@@ -82,13 +82,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Descriptor"
-                        android:drawableTint="@color/teal_200"
                         android:textStyle="bold"
                         android:elevation="5dp"
                         android:textColor="@color/teal_200"
                         app:drawableEndCompat="@drawable/ic_arrow_down"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
+                        app:drawableTint="@color/teal_200"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.recyclerview.widget.RecyclerView
