--- a/app/src/main/res/layout/list_item_ble_descriptor_layout.xml
+++ b/app/src/main/res/layout/list_item_ble_descriptor_layout.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        app:cardCornerRadius="5dp">teal_700
+        app:cardCornerRadius="5dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{`UUID:\n`+descriptorData.descriptorUUID}"
-                android:textColor="@color/white"
+                android:textColor="@color/light_grey"
                 app:layout_constraintBottom_toTopOf="@+id/tvDesProperty"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="@{`Property:`+descriptorData.descriptorProperty}"
-                android:textColor="@color/white"
+                android:textColor="@color/light_grey"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvDesUUID"
