reading, writing, notifying, indicating done for characteristics

--- a/app/src/main/res/layout/list_item_ble_characteristics_layout.xml
+++ b/app/src/main/res/layout/list_item_ble_characteristics_layout.xml
@@ -13,6 +13,10 @@
             name="operationName"
             type="String" />
 
+        <variable
+            name="propertyValue"
+            type="String" />
+
     </data>
 
     <androidx.cardview.widget.CardView
@@ -62,6 +66,16 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvCharProperties"
                 tools:listitem="@layout/list_item_ble_property_layout" />
 
+            <TextView
+                android:id="@+id/tvValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{propertyValue}"
+                android:textColor="@color/teal_200"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rvProperty" />
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -69,7 +83,7 @@
                 app:cardCornerRadius="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rvProperty">
+                app:layout_constraintTop_toBottomOf="@+id/tvValue">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
